<resources>
    <string name="app_name">Card Info Finder</string>
    <string name="input_card_details">Input Card Details</string>
    <string name="scan_card">Scan Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_credit_debit_card_number_text">Enter Credit/Debit Card Number</string>
    <string name="credit_card_number_input_hint">9876 6543 3210 1321 111</string>
    <string name="check">Check</string>
    <string name="card_brand">Card Brand</string>
    <string name="card_type">Card Type</string>
    <string name="card_bank">Card Bank</string>
    <string name="card_country">Card Country</string>
    <string name="mastercard">MASTERCARD</string>
    <string name="debit">Debit</string>
    <string name="zenith">ZENITH BANK</string>
    <string name="estonia">Estonia</string>
</resources>