<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" alias="V"/>
        
        <variable
            name="isLoading"
            type="Boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.info_finder.fragments.InputCardDetailsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/enter_credit_debit_card_number_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/card_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_white"
            android:fontFamily="sans-serif"
            android:hint="@string/credit_card_number_input_hint"
            android:inputType="number"
            android:padding="10dp"
            android:typeface="monospace"
            app:allowed_chars="1234567890"
            app:keep_hint="true"
            app:mask="#### #### #### #### ###" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:elevation="4dp"
                android:visibility="@{ isLoading ? V.VISIBLE : V.GONE }"
                android:id="@+id/loading_progress"
                android:indeterminateTint="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias=".3"
                />

            <Button
                android:id="@+id/check_card_details_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/check" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>